# automathon

./: .gitignore  .travis.yml  404.html  LICENSE  MODULE.bazel  README.md  WORKSPACE.bazel  buildPackage.sh  index.html  installVenvLibs.sh  mkdocs.yml  requirements.txt  ruff.toml  runTests.sh  setup.py  sitemap.xml  uploadPackage.sh  virtualEnv.sh
.github/workflows/: main.yml  pypi_release.yml
Pythomata/finiteAutomata/: FA.py  dfa.py  nfa.py
automathon/: BUILD.bazel  __init__.py  __version__.py
automathon/errors/: BUILD.bazel  __init__.py  errors.py
automathon/finiteAutomata/: BUILD.bazel  __init__.py  dfa.py  nfa.py
automathon/finite_automata/: BUILD.bazel  dfa.py  finite_automata.py  nfa.py
automathon/utils/: BUILD.bazel  utils.py
dfa/: index.html
docs/: dfa.md  index.md  nfa.md
nfa/: index.html
pythomata.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pythomata/finiteAutomata/: dfa.py  nfa.py
search/: search_index.json
tests/: BUILD.bazel  test_dfa.py  test_finiteAutomata.py  test_nfa.py
